--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Закрывающий тег</title>
         <link rel="icon" href="./images/favicon.ico" />
         <link rel="icon" href="./svg/favicon.svg" />
-        <link rel="icon" href="./images/favicon.png" />
+        <link rel="apple-touch-icon" href="./images/favicon.png" />
         <link rel="stylesheet" href="./fonts/fonts.css" />
         <link rel="stylesheet" href="./styles/variables.css" />
         <link rel="stylesheet" href="./styles/globals.css" />
@@ -35,8 +35,8 @@
                         </p>
                     </div>
                     <div class="button_case">
-                        <button class="card__icon-button">
-                            <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <button class="card__icon-button" type="button">
+                            <svg class="like-icon" width="37" height="36" viewBox="0 0 37 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_0_1575)">
                                     <g class="heart">
                                         <path
@@ -59,7 +59,7 @@
                                 </g>
                             </svg>
                         </button>
-                        <button class="card__like-button button">
+                        <button class="card__like-button button" type="button">
                             <span class="button__text">Like</span>
                         </button>
                     </div>
@@ -81,7 +81,7 @@
                         <p class="post__text">Момент, когда понимаешь, что начало положено, собираешь все свои силы и готовишься к предстоящим трудностям. Учишься распределять время, планировать свой день и работать умом.</p>
                     </div>
                     <div class="button_case">
-                        <button class="card__icon-button">
+                        <button class="card__icon-button" type="button">
                             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_0_1575)">
                                     <g class="heart">
@@ -108,7 +108,7 @@
                                 </g>
                             </svg>
                         </button>
-                        <button class="card__like-button button"><span class="button__text">Like</span></button>
+                        <button class="card__like-button button" type="button"><span class="button__text">Like</span></button>
                     </div>
                 </div>
             </article>
@@ -127,7 +127,7 @@
                         </p>
                     </div>
                     <div class="button_case">
-                        <button class="card__icon-button">
+                        <button class="card__icon-button" type="button">
                             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_0_1575)">
                                     <g class="heart">
@@ -154,7 +154,7 @@
                                 </g>
                             </svg>
                         </button>
-                        <button class="card__like-button button"><span class="button__text">Like</span></button>
+                        <button class="card__like-button button" type="button"><span class="button__text">Like</span></button>
                     </div>
                 </div>
             </article>
@@ -174,7 +174,7 @@
                         <p class="post__text">Момент появления настоящего интереса к происходящему. Хотелось быстрее сесть за рабочее место и изучать дальнейший материал. Пополнять копилку знаний, отрабатывать навыки на практике.</p>
                     </div>
                     <div class="button_case">
-                        <button class="card__icon-button">
+                        <button class="card__icon-button" type="button">
                             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_0_1575)">
                                     <g class="heart">
@@ -201,7 +201,7 @@
                                 </g>
                             </svg>
                         </button>
-                        <button class="card__like-button button"><span class="button__text">Like</span></button>
+                        <button class="card__like-button button" type="button"><span class="button__text">Like</span></button>
                     </div>
                 </div>
             </article>
@@ -221,7 +221,7 @@
                         <p class="post__text">Момент, когда перестаешь бояться обращаться за помощью к одногруппникам и наставникам. Понимаешь, что трудности возможны и это нормально. Учишься бороться со сложностями.</p>
                     </div>
                     <div class="button_case">
-                        <button class="card__icon-button">
+                        <button class="card__icon-button" type="button">
                             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_0_1575)">
                                     <g class="heart">
@@ -248,7 +248,7 @@
                                 </g>
                             </svg>
                         </button>
-                        <button class="card__like-button button"><span class="button__text">Like</span></button>
+                        <button class="card__like-button button" type="button"><span class="button__text">Like</span></button>
                     </div>
                 </div>
             </article>
@@ -265,7 +265,7 @@
                         <p class="post__text">Момент, когда ты научился распределять время, понимать, что тебе предстоит в ближайщие несколько недель. Научился вникать в прочитанное и пользоваться изученным.</p>
                     </div>
                     <div class="button_case">
-                        <button class="card__icon-button">
+                        <button class="card__icon-button" type="button">
                             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_0_1575)">
                                     <g class="heart">
@@ -292,7 +292,7 @@
                                 </g>
                             </svg>
                         </button>
-                        <button class="card__like-button button"><span class="button__text">Like</span></button>
+                        <button class="card__like-button button" type="button"><span class="button__text">Like</span></button>
                     </div>
                 </div>
             </article>
@@ -315,7 +315,7 @@
                         </p>
                     </div>
                     <div class="button_case">
-                        <button class="card__icon-button">
+                        <button class="card__icon-button" type="button">
                             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_0_1575)">
                                     <g class="heart">
@@ -342,7 +342,7 @@
                                 </g>
                             </svg>
                         </button>
-                        <button class="card__like-button button"><span class="button__text">Like</span></button>
+                        <button class="card__like-button button" type="button"><span class="button__text">Like</span></button>
                     </div>
                 </div>
             </article>
@@ -365,7 +365,7 @@
                         </p>
                     </div>
                     <div class="button_case">
-                        <button class="card__icon-button">
+                        <button class="card__icon-button" type="button">
                             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_0_1575)">
                                     <g class="heart">
@@ -392,7 +392,7 @@
                                 </g>
                             </svg>
                         </button>
-                        <button class="card__like-button button">
+                        <button class="card__like-button button" type="button">
                             <span class="button__text">Like</span>
                         </button>
                     </div>
